# css-minify-comparation

./: Cargo.toml  README.md  benchmark.js  index.d.ts  index.js  package.json
npm/android-arm-eabi/: package.json
npm/android-arm64/: package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/freebsd-x64/: package.json
npm/linux-arm-gnueabihf/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-arm64-msvc/: package.json
npm/win32-ia32-msvc/: package.json
npm/win32-x64-msvc/: package.json
src/: lib.rs
